Cacheleme işlemi eklendi

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -3,7 +3,7 @@
     "Audience": "musa@musa.com",
     "Issuer": "musa@musa.com",
     "AccessTokenExpiration": 10,
-    "Security": "mysupersecretkeymysupersecretkey"
+    "SecurityKey": "mysupersecretkeymysupersecretkey"
   },
   "Logging": {
     "LogLevel": {
